add_[in_x]_in_[FZ_ALL]

--- a/my_neuralnet_1.ipynb
+++ b/my_neuralnet_1.ipynb
@@ -4659,7 +4659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4705,7 +4705,7 @@
     "    fz3 = sigmoid (z3)\n",
     "    print(fz3)\n",
     "    Z_ALL = [z1, z2, z3]\n",
-    "    FZ_ALL = [fz1, fz2, fz3]\n",
+    "    FZ_ALL = [in_x, fz1, fz2, fz3]\n",
     "    return Z_ALL, FZ_ALL #xを入力したnetworkで順伝播して得られた出力結果\n",
     "\n",
     "def sigmoid(x):\n",
@@ -4791,6 +4791,26 @@
     "                                                                                            # pprint.pprint(teach)\n",
     "\n",
     "                                                                                            # grad_list=[]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.37454012, 0.95071431, 0.73199394]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "in_x"
    ]
   },
   {
@@ -5673,9 +5693,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.60814729 0.68500789]]\n",
+      "＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃いま， 2 層目を見ています＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
+      "●の処理開始●●●●●●●●●●●●●●●●●●●●●●●●\n",
+      "サークル\n",
+      "Y: [[0.60814729 0.68500789]] Length: 1\n",
+      "teach: [[0.5 0.7]] Length: 1\n",
+      "●の処理終了＆結果↓●●●●●●●●●●●●●●●\n",
+      "[array([ 0.10814729, -0.01499211])]\n",
+      "for文を抜けて，layer_num_loop2= 2 になりました．現在の行列は↓\n",
+      "[array([ 0.10814729, -0.01499211])]\n",
+      "です．さいごに▲□を一回ずつやります\n",
+      "▲の処理開始▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲\n",
+      "▲の処理終了▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲\n",
+      "array([[0.22823842, 0.        ],\n",
+      "       [0.        , 0.22282267]])\n",
+      "[array([ 0.10814729, -0.01499211])]\n",
+      "計算前↑，計算後↓\n",
+      "array([[ 0.02468337, -0.00334058]])\n",
+      "■の処理開始■■■■■■■■■■■■■■■■■■■■■■■■■\n",
+      "square_gyou = 0\n",
+      "0行列を作る\n",
+      "array([[0., 0., 0.],\n",
+      "       [0., 0., 0.]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\atusi\\anaconda3\\lib\\site-packages\\numpy\\core\\fromnumeric.py:43: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  result = getattr(asarray(obj), method)(*args, **kwds)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (3,) into shape (1,)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 139\u001b[0m\n\u001b[0;32m    137\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m計算前↑，計算後↓\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    138\u001b[0m pprint\u001b[39m.\u001b[39mpprint(koubai)\n\u001b[1;32m--> 139\u001b[0m square_koubailist \u001b[39m=\u001b[39m grad_z_and_w(layer_num_loop2, FZ_ALL, W_ALL)\n\u001b[0;32m    140\u001b[0m \u001b[39m# print(\"-----------\")\u001b[39;00m\n\u001b[0;32m    141\u001b[0m \u001b[39m# print(layer_num_loop1)\u001b[39;00m\n\u001b[0;32m    142\u001b[0m \u001b[39m# print(\"-----------\")\u001b[39;00m\n\u001b[0;32m    143\u001b[0m \u001b[39m# pprint.pprint(W_ALL[layer_num_loop1])\u001b[39;00m\n\u001b[0;32m    144\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39msquare_koubailistつまりその層の勾配行列（全て）\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[15], line 63\u001b[0m, in \u001b[0;36mgrad_z_and_w\u001b[1;34m(layer_num, FZ_ALL, W_ALL)\u001b[0m\n\u001b[0;32m     61\u001b[0m square \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mtranspose(square) \u001b[39m#ゼロ行列を転置する　これら二つを使ってやればいい！？\u001b[39;00m\n\u001b[0;32m     62\u001b[0m pprint\u001b[39m.\u001b[39mpprint(square)\n\u001b[1;32m---> 63\u001b[0m square_FZ_ALL \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mtranspose(FZ_ALL) \u001b[39m#FZを転置したのを用意\u001b[39;00m\n\u001b[0;32m     64\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m転置したFZ_ALL↓\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     65\u001b[0m pprint\u001b[39m.\u001b[39mpprint(square_FZ_ALL)\n",
+      "File \u001b[1;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mtranspose\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\atusi\\anaconda3\\lib\\site-packages\\numpy\\core\\fromnumeric.py:660\u001b[0m, in \u001b[0;36mtranspose\u001b[1;34m(a, axes)\u001b[0m\n\u001b[0;32m    601\u001b[0m \u001b[39m@array_function_dispatch\u001b[39m(_transpose_dispatcher)\n\u001b[0;32m    602\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtranspose\u001b[39m(a, axes\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m    603\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    604\u001b[0m \u001b[39m    Reverse or permute the axes of an array; returns the modified array.\u001b[39;00m\n\u001b[0;32m    605\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    658\u001b[0m \n\u001b[0;32m    659\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 660\u001b[0m     \u001b[39mreturn\u001b[39;00m _wrapfunc(a, \u001b[39m'\u001b[39;49m\u001b[39mtranspose\u001b[39;49m\u001b[39m'\u001b[39;49m, axes)\n",
+      "File \u001b[1;32mc:\\Users\\atusi\\anaconda3\\lib\\site-packages\\numpy\\core\\fromnumeric.py:54\u001b[0m, in \u001b[0;36m_wrapfunc\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     52\u001b[0m bound \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(obj, method, \u001b[39mNone\u001b[39;00m)\n\u001b[0;32m     53\u001b[0m \u001b[39mif\u001b[39;00m bound \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m---> 54\u001b[0m     \u001b[39mreturn\u001b[39;00m _wrapit(obj, method, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[0;32m     56\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     57\u001b[0m     \u001b[39mreturn\u001b[39;00m bound(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n",
+      "File \u001b[1;32mc:\\Users\\atusi\\anaconda3\\lib\\site-packages\\numpy\\core\\fromnumeric.py:43\u001b[0m, in \u001b[0;36m_wrapit\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m:\n\u001b[0;32m     42\u001b[0m     wrap \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m---> 43\u001b[0m result \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(asarray(obj), method)(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[0;32m     44\u001b[0m \u001b[39mif\u001b[39;00m wrap:\n\u001b[0;32m     45\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(result, mu\u001b[39m.\u001b[39mndarray):\n",
+      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (3,) into shape (1,)"
+     ]
+    }
+   ],
    "source": [
     "# square変更実験のコピー版＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
     "# square変更実験のコピー版＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃＃\n",
@@ -5734,15 +5808,20 @@
     "    print(\"■の処理開始■■■■■■■■■■■■■■■■■■■■■■■■■\")\n",
     "    KOUBAILIST = []\n",
     "    for square_gyou in range(len(W_ALL[layer_num][0])):#その層の行数の数分繰り返す\n",
+    "        print(\"square_gyou =\", square_gyou )\n",
+    "        print(\"0行列を作る(転置もしてる)結果↓\")\n",
     "        square = np.zeros((len(W_ALL[layer_num]), len(Z_ALL[layer_num][0]))) #その層のWとZの大きさの０だけ行列を作成つまりz行w列の０行列を作成\n",
-    "        print(\"0行列を作る\")\n",
+    "        square = np.transpose(square) #ゼロ行列を転置する　これら二つを使ってやればいい！？\n",
     "        pprint.pprint(square)\n",
-    "        square[square_gyou] = FZ_ALL[layer_num] #FZ_ALLのlayer_num番目（つまり今見てる層のfz）を，ループごとに違うところに代入\n",
+    "        square_FZ_ALL = np.transpose(FZ_ALL[]) #FZを転置したのを用意\n",
+    "        print(\"転置したFZ_ALL↓\")\n",
+    "        pprint.pprint(square_FZ_ALL)\n",
+    "        square[square_gyou] = square_FZ_ALL[square_gyou] #FZ_ALLのlayer_num番目（つまり今見てる層のfz）を，ループごとに違うところに代入\n",
     "        print(\"FZ_ALLのlayer_num番目（つまり今見てる層のfz）を，ループごとに違うところに代入\")\n",
     "        pprint.pprint(square)\n",
-    "        square = np.transpose(square)\n",
-    "        print(\"転置処理\")\n",
-    "        pprint.pprint(square)\n",
+    "        # square = np.transpose(square)\n",
+    "        # print(\"転置処理\")\n",
+    "        # pprint.pprint(square)\n",
     "        print(\"１掛ける３の勾配が出てるはず↓\")\n",
     "        pprint.pprint(np.dot(koubai, square))\n",
     "        KOUBAILIST.append(np.dot(koubai, square)) #そして計算，すると勾配が１×３の形で出てくるので，それを一行ずつやりながらKOUBAILISTに入れていく\n",
