--- a/日本語化mujocoチュートリアル.ipynb
+++ b/日本語化mujocoチュートリアル.ipynb
@@ -81,7 +81,7 @@
         }
       ],
       "source": [
-        "#@title インストールが成功したかどうかを確認する\n",
+        "#@title インストールが成功したかどうかを確認する.\n",
         "\n",
         "# from google.colab import files\n",
         "\n",
