conv_japanese_finished

--- a/日本語化mujocoチュートリアル.ipynb
+++ b/日本語化mujocoチュートリアル.ipynb
@@ -1109,7 +1109,7 @@
         "id": "u_zN8vATwcGy"
       },
       "source": [
-        "# Example: A chaotic pendulum"
+        "# 例: カオスな振り子"
       ]
     },
     {
@@ -1118,7 +1118,7 @@
         "id": "g1MKUEL_eSCM"
       },
       "source": [
-        "Below is a model of a chaotic pendulum, similar to [this one](https://www.exploratorium.edu/exhibits/chaotic-pendulum) in the San Francisco Exploratorium."
+        "以下は、サンフランシスコエクスプロレータリウムにある[この振り子](https://www.exploratorium.edu/exhibits/chaotic-pendulum)に類似したカオスな振り子のモデルです。"
       ]
     },
     {
@@ -1177,8 +1177,8 @@
         "id": "EKZrTBSS5f49"
       },
       "source": [
-        "## Timing\n",
-        "Let's see a video of it in action while we time the components:"
+        "## タイミング\n",
+        "それを動作させながら各コンポーネントのタイミングを計測する動画を見てみましょう："
       ]
     },
     {
@@ -1238,10 +1238,10 @@
         "id": "Iqi_m8HT-X5k"
       },
       "source": [
-        "Note that rendering is **much** slower than the simulated physics.\n",
+        "レンダリングがシミュレーションされた物理よりも**はるかに**遅いことに注意してください。\n",
         "\n",
-        "## Chaos\n",
-        "This is a [chaotic](https://en.wikipedia.org/wiki/Chaos_theory) system (small pertubations in initial conditions accumulate quickly):"
+        "## カオス\n",
+        "これは[カオス理論](https://en.wikipedia.org/wiki/Chaos_theory)に基づくシステムです（初期条件のわずかな変化が急速に蓄積します）。"
       ]
     },
     {
@@ -1299,12 +1299,12 @@
         "id": "daSIA_ewFGxV"
       },
       "source": [
-        "## Timestep and accuracy\n",
-        "**Question:** Why is the energy varying at all? There is no friction or damping, this system should conserve energy.\n",
+        "## タイムステップと精度\n",
+        "**質問:** なぜエネルギーが変動しているのですか？摩擦や減衰がないので、このシステムはエネルギーを保存するはずです。\n",
         "\n",
-        "**Answer:** Because of the discretization of time.\n",
+        "**回答:** 時間の離散化のためです。\n",
         "\n",
-        "If we decrease the timestep we'll get better accuracy and better energy conservation:"
+        "タイムステップを減少させると、精度が向上し、エネルギーの保存が向上します："
       ]
     },
     {
@@ -1358,8 +1358,8 @@
         "id": "jsVkUm7QKb9I"
       },
       "source": [
-        "## Timestep and divergence\n",
-        "When we increase the time step, the simulation quickly diverges:"
+        "## タイムステップと発散\n",
+        "タイムステップを増やすと、シミュレーションが急速に発散します："
       ]
     },
     {
@@ -1423,9 +1423,9 @@
         "id": "FITYfGyy3XPL"
       },
       "source": [
-        "# Contacts\n",
+        "# コンタクト\n",
         "\n",
-        "Let's go back to our box and sphere example and give it a free joint:"
+        "ボックスと球の例に戻り、それに自由なジョイントを与えましょう："
       ]
     },
     {
@@ -1472,7 +1472,7 @@
         "id": "Z2amdQCn8REu"
       },
       "source": [
-        "Let render this body rolling on the floor, in slow-motion, while visualizing contact points and forces:"
+        "床の上をゆっくりと転がるこのボディを、接触点と力を視覚化しながらレンダリングしましょう："
       ]
     },
     {
@@ -1524,10 +1524,9 @@
         "id": "_181TbtVSMBl"
       },
       "source": [
-        "## Analysis of contact forces\n",
+        "## 接触力の解析\n",
         "\n",
-        "Let's rerun the above simulation (with a different random initial condition) and\n",
-        "plot some values related to the contacts"
+        "上記のシミュレーションを再実行しましょう（異なるランダムな初期条件で）、そして接触に関連するいくつかの値をプロットします。"
       ]
     },
     {
@@ -1613,9 +1612,9 @@
         "id": "zV5PkYzFXu42"
       },
       "source": [
-        "## Friction\n",
+        "## 摩擦\n",
         "\n",
-        "Let's see the effect of changing friction values"
+        "摩擦値を変更する効果を見てみましょう。"
       ]
     },
     {
@@ -1685,7 +1684,7 @@
         "id": "ArmmaPqGP6W7"
       },
       "source": [
-        "# Tendons, actuators and sensors"
+        "# Tendons, actuators and sensors（# 腱、アクチュエータ、センサー）"
       ]
     },
     {
@@ -1757,7 +1756,7 @@
         "id": "u8z2vrOr_RVD"
       },
       "source": [
-        "actuated bat and passive \"piñata\":"
+        "駆動されるバット（bat）と受動的な「ピニャータ」："
       ]
     },
     {
@@ -1801,7 +1800,7 @@
         "id": "gwHMy_iRA7Jh"
       },
       "source": [
-        "Let's plot the values measured by our accelerometer sensor:"
+        "さて、私たちの加速度計センサーで測定された値をプロットしてみましょう："
       ]
     },
     {
@@ -1830,7 +1829,7 @@
         "id": "0YKSTtJ_BQ7x"
       },
       "source": [
-        "Note how the moments when the body is hit by the bat are clearly visible in the accelerometer measurements."
+        "加速度計の測定値において、ボディがバットで打たれる瞬間が明確に見えることに注意してください。"
       ]
     },
     {
@@ -1839,11 +1838,11 @@
         "id": "1kOs1wTc7uCZ"
       },
       "source": [
-        "# Advanced rendering\n",
+        "# 高度なレンダリング\n",
         "\n",
-        "Like joint visualization, additional rendering options are exposed as parameters to the `render` method.\n",
+        "ジョイントの可視化と同様に、追加のレンダリングオプションは `render` メソッドのパラメータとして公開されています。\n",
         "\n",
-        "Let's bring back our first model:"
+        "最初のモデルに戻りましょう："
       ]
     },
     {
@@ -1960,9 +1959,9 @@
         "id": "wo72mo0mGIXr"
       },
       "source": [
-        "## The camera matrix\n",
+        "## カメラ行列\n",
         "\n",
-        "For a description of the camera matrix see the article [Camera matrix](https://en.wikipedia.org/wiki/Camera_matrix) on Wikipedia."
+        "カメラ行列の詳細については、Wikipediaの記事 [Camera matrix](https://en.wikipedia.org/wiki/Camera_matrix) を参照してください。"
       ]
     },
     {
@@ -2011,7 +2010,7 @@
         "id": "Bs89vS0wLoU0"
       },
       "source": [
-        "Let's use the camera matrix to project from world to camera coordinates:"
+        "カメラ行列を使用して、ワールド座標からカメラ座標に変換してみましょう："
       ]
     },
     {
@@ -2062,9 +2061,9 @@
         "id": "AGm5-e0sHEAF"
       },
       "source": [
-        "## Modifying the scene\n",
+        "## シーンの変更\n",
         "\n",
-        "Let's add some arbitrary geometry to the `mjvScene`."
+        "`mjvScene` にいくつかの任意のジオメトリを追加しましょう。"
       ]
     },
     {
