--- a/日本語化mujocoチュートリアル.ipynb
+++ b/日本語化mujocoチュートリアル.ipynb
@@ -1368,23 +1368,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 1,
       "metadata": {
         "id": "o4S9nYhHOKmb"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "positions [0.   0.   0.02 1.   0.   0.   0.  ]\n",
-            "velocities [0. 0. 0. 0. 0. 0.]\n"
+          "ename": "NameError",
+          "evalue": "name 'data' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32mc:\\Users\\atusi\\OneDrive\\ドキュメント\\研究関連（修士）\\Github\\sibuya\\日本語化mujocoチュートリアル.ipynb セル 56\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/%E6%97%A5%E6%9C%AC%E8%AA%9E%E5%8C%96mujoco%E3%83%81%E3%83%A5%E3%83%BC%E3%83%88%E3%83%AA%E3%82%A2%E3%83%AB.ipynb#Y105sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mpositions(data.qpos)=\u001b[39m\u001b[39m'\u001b[39m, data\u001b[39m.\u001b[39mqpos)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/atusi/OneDrive/%E3%83%89%E3%82%AD%E3%83%A5%E3%83%A1%E3%83%B3%E3%83%88/%E7%A0%94%E7%A9%B6%E9%96%A2%E9%80%A3%EF%BC%88%E4%BF%AE%E5%A3%AB%EF%BC%89/Github/sibuya/%E6%97%A5%E6%9C%AC%E8%AA%9E%E5%8C%96mujoco%E3%83%81%E3%83%A5%E3%83%BC%E3%83%88%E3%83%AA%E3%82%A2%E3%83%AB.ipynb#Y105sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mvelocities(data.qvel)=\u001b[39m\u001b[39m'\u001b[39m, data\u001b[39m.\u001b[39mqvel)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
           ]
         }
       ],
       "source": [
-        "print('positions', data.qpos)\n",
-        "print('velocities', data.qvel)"
+        "print('positions(data.qpos)=', data.qpos)\n",
+        "print('velocities(data.qvel)=', data.qvel)"
       ]
     },
     {
@@ -1394,7 +1397,8 @@
       },
       "source": [
         "速度は解釈しやすいですね、6つのゼロがあります、それぞれが1つの自由度に対応しています。(つまり速度velocityの6つのうち最初３つはx,y,z方向の速度で，最後の３つはx,y,zの角速度)では、長さ7の位置はどうでしょうか？最初の2cmの高さが見えます。その後の4つの数字は3Dの向きを示しており、*ユニット四元数*で定義されています。3Dの向きは**4**つの数字で表され、角速度は**3**つの数字です。詳細については、ウィキペディアの[四元数と空間回転](https://en.wikipedia.org/wiki/Quaternions_and_spatial_rotation)の記事を参照してください。  \n",
-        "### つまり，qposの６つの値は最初の3つが位置座標で，残り４つがクオータニオンを使った向き表現\n",
+        "### つまり，qposの７つの値は最初の３つが位置座標で，残り４つがクオータニオンを使った向き表現\n",
+        "### そして，qvelの６つの値は最初の３つがxyz軸方向への速度で，残り３つがxyz軸に対する回転速度（回転角速度？のはず）\n",
         "\n",
         "さて、ビデオを作成しましょう："
       ]
