--- a/mujocoの使い方整理.ipynb
+++ b/mujocoの使い方整理.ipynb
@@ -1230,6 +1230,217 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " 'disable_depth_rendering',\n",
+       " 'disable_segmentation_rendering',\n",
+       " 'enable_depth_rendering',\n",
+       " 'enable_segmentation_rendering',\n",
+       " 'height',\n",
+       " 'model',\n",
+       " 'render',\n",
+       " 'scene',\n",
+       " 'update_scene',\n",
+       " 'width']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mujoco.Renderer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MuJoCoの描画攻略"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "import mujoco\n",
+    "import mujoco.viewer\n",
+    "import numpy as np\n",
+    "# import mujoco\n",
+    "# import mediapy as media\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "xml = \"\"\"\n",
+    "<mujoco>\n",
+    "  <worldbody>\n",
+    "    <light pos=\"0 -0.5 3\"/>\n",
+    "    <geom name=\"ground\" type=\"plane\" pos=\"0 0 0\" size=\"2 2 .1\"  />\n",
+    "    <body name=\"box_and_sphere\" pos=\"0 0 1\">\n",
+    "      <freejoint/>\n",
+    "      <geom name=\"red_box\" type=\"box\" size=\".1 .1 .1\" rgba=\"1 0 0 0.3\"/>\n",
+    "      <geom name=\"green_sphere\" size=\".06\" pos=\".1 .1 .1\" rgba=\"0 1 0 1\"/>\n",
+    "      <site name=\"IMU\" size=\"0.05\"/>\n",
+    "    </body>\n",
+    "    <body name=\"box_and_sphere2\" pos=\"0 0.2 1.5\">\n",
+    "      <freejoint/>\n",
+    "      <geom name=\"red_box2\" type=\"box\" size=\".1 .1 .1\" rgba=\"1 0 0 1\"/>\n",
+    "      <geom name=\"green_sphere2\" size=\".06\" pos=\".1 .1 .1\" rgba=\"0 1 0 1\"/>\n",
+    "    </body>\n",
+    "    <site type=\"box\" rgba=\"1 0 0 0.2\" fromto=\"0 0 0 2 0 0\" size=\"0.02\"/>\n",
+    "    <site type=\"box\" rgba=\"0 1 0 0.2\" fromto=\"0 0 0 0 2 0\" size=\"0.02\"/>\n",
+    "    <site type=\"box\" rgba=\"0 0 1 0.2\" fromto=\"0 0 0 0 0 2\" size=\"0.02\"/>\n",
+    "  </worldbody>\n",
+    "\n",
+    "  <sensor>\n",
+    "    <accelerometer name=\"accelerometer\" site=\"IMU\"/>\n",
+    "  </sensor>\n",
+    "</mujoco>\n",
+    "\"\"\"\n",
+    "\n",
+    "m = mujoco.MjModel.from_xml_string(xml)\n",
+    "d = mujoco.MjData(m)\n",
+    "stepcount = 0\n",
+    "\n",
+    "with mujoco.viewer.launch_passive(m, d) as viewer: #mujoco描画起動\n",
+    "  # 30秒後に自動的にビューアを閉じる。mujoco viewer.launch_passiveはopenfile関数的な感じで，これを実行するとビューアが出る！\n",
+    "  start = time.time()\n",
+    "\n",
+    "  while viewer.is_running() and time.time() - start < 30:\n",
+    "    step_start = time.time()\n",
+    "\n",
+    "    # mj_stepでシミュレーションを1進める　　　　　　　mj_stepは、物理シミュレーションをステップする前に、方策を評価し制御信号を適用するコードで置き換えることができます。\n",
+    "    mujoco.mj_step(m, d)\n",
+    "    stepcount += 1\n",
+    "\n",
+    "    # ビューアのオプションの例: 2秒ごとに接触点を切り替える。\n",
+    "    # with viewer.lock():\n",
+    "    #   viewer.opt.flags[mujoco.mjtVisFlag.mjVIS_CONTACTPOINT] = int(d.time % 2)\n",
+    "    if (stepcount % 150 == 0):{\n",
+    "    # mj_stepで進めたシミュレーションを，描画に反映する　　物理状態の変更を反映する\n",
+    "    viewer.sync()}\n",
+    "\n",
+    "    # 基本的な時間の計測、壁時計に対してドリフトします。\n",
+    "    time_until_next_step = m.opt.timestep - (time.time() - step_start)\n",
+    "    if time_until_next_step > 0:\n",
+    "      time.sleep(0.0001)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__copy__',\n",
+       " '__deepcopy__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'actuatorgroup',\n",
+       " 'bvh_depth',\n",
+       " 'flags',\n",
+       " 'frame',\n",
+       " 'geomgroup',\n",
+       " 'jointgroup',\n",
+       " 'label',\n",
+       " 'sitegroup',\n",
+       " 'skingroup',\n",
+       " 'tendongroup']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(viewer.opt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1697618970.3664937\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(start)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
