--- a/mujocoの使い方整理.ipynb
+++ b/mujocoの使い方整理.ipynb
@@ -1345,7 +1345,7 @@
     "\n",
     "with mujoco.viewer.launch_passive(m, d) as viewer: #mujoco描画起動\n",
     "  # 30秒後に自動的にビューアを閉じる。mujoco viewer.launch_passiveはopenfile関数的な感じで，これを実行するとビューアが出る！\n",
-    "  start = time.time()\n",
+    "  start = time.time() #スタート時間計測\n",
     "\n",
     "  while viewer.is_running() and time.time() - start < 30:\n",
     "    step_start = time.time()\n",
