--- a/mujocoの使い方整理.ipynb
+++ b/mujocoの使い方整理.ipynb
@@ -2749,7 +2749,7 @@
     "            <body name=\"goal1\" pos=\"-2 0 0\">\n",
     "                <geom name=\"goal\" type=\"sphere\" size=\"0.09\" rgba=\"1 1 0 0.6\" />\n",
     "            </body>\n",
-    "     \n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -3154,6 +3154,52 @@
     "class coreEnv:\n",
     "    def __init__(self):\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "今日の発表順番は:\n",
+      "廣島君\n",
+      "橋口さん\n",
+      "水野君\n",
+      "井上君\n",
+      "佐藤君\n",
+      "川田君\n",
+      "池岡さん\n",
+      "森岡君\n",
+      "西本君\n",
+      "有川君\n",
+      "森永君\n",
+      "青木君\n",
+      "玉村さん\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def shuffle_names(names):\n",
+    "    random.shuffle(names)\n",
+    "    return names\n",
+    "\n",
+    "#15人の名前のリスト\n",
+    "names_list = [\"森岡君\", \"廣島君\", \"有川君\", \"井上君\", \"森永君\", \"川田君\", \"玉村さん\", \"橋口さん\", \"池岡さん\", \"水野君\",\"青木君\", \"西本君\", \"佐藤君\"]\n",
+    "\n",
+    "#ランダムに並び替えた名前のリストを取得\n",
+    "shuffled_names = shuffle_names(names_list)\n",
+    "\n",
+    "#結果の出力\n",
+    "print(\"今日の発表順番は:\")\n",
+    "for name in shuffled_names:\n",
+    "    print(name)\n",
+    "    完成主軸"
    ]
   }
  ],
